Still not done, could not fix alignment problem.

--- a/css/master.css
+++ b/css/master.css
@@ -2,6 +2,8 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  top: 0;
+  left: 0;
 }
 
 @font-face {
@@ -95,15 +97,15 @@ img {
 }
 
 .container {
-  width: 100%;
-  padding-right: calc(25vw);
-  padding-left: calc(25vw);
+  width: calc(100vw);
+  padding-right: calc(20vw);
+  padding-left: calc(20vw);
   padding-top: calc(25vh);
   padding-bottom: calc(25vh);
   height: calc(100vh);
   margin-right: auto;
   margin-left: auto;
-  background: linear-gradient( rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25) ), url('https://source.unsplash.com/random/1920x1080');
+  background: linear-gradient( rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25) ), url('https://source.unsplash.com/random/3840x2160');
   /* background-image: url(https://source.unsplash.com/random/1920x1080); */
   background-position: center;
   background-repeat: no-repeat;
@@ -156,21 +158,18 @@ img {
   margin-bottom: 60px;
 }
 
-.fillheight {
-  height: 100%;
-}
-
 .app {
   height: calc(100vh);
+  width: calc(100vw);
   position: relative;
   background-color: #000000;
 }
 
 .landingbox {
-  padding-left: calc(5vw);
-  padding-right: calc(5vw);
-  padding-top: calc(5vh);
-  padding-bottom: calc(5vh);
+  padding-left: calc(10vw);
+  padding-right: calc(10vw);
+  padding-top: calc(10vh);
+  padding-bottom: calc(10vh);
   -webkit-box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.25);
   -moz-box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.25);
   box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.25);
